# ai-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.crewai  Dockerfile.dev  Dockerfile.langchain  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/: architecture-decision.md  index.md
requirements/: crewai.txt  langchain.txt
src/app/: __init__.py  main.py
src/crewai_examples/: __init__.py  crew_ai_starter.py
src/langchain_examples/: __init__.py  langchain_langgraph_starter.py
tests/: __init__.py  test_main.py
