[tool.poetry]
name = "ai-agents"
version = "0.1.0"
description = "AI Agents Portfolio - LangChain/LangGraph and CrewAI examples"
authors = ["Humberto Lomeu <hcslomeu@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

# Note: AI/ML packages are managed via Docker containers
# See requirements/langchain.txt and requirements/crewai.txt
# Run with: docker compose run langchain or docker compose run crewai

# Web frameworks (for local API development)
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
streamlit = "^1.40.0"

# Database
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"

# Data processing
pandas = "^2.2.0"
pyarrow = "^17.0.0"

# CLI tools
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"

# HTTP clients
httpx = "^0.27.0"
requests = "^2.31.0"

# Configuration
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
# Code quality
black = "^24.1.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pylint = "^3.0.3"
pydocstyle = "^6.3.0"
bandit = "^1.7.6"

# Testing
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"

# Documentation
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.2"
pygments = "^2.16.1"
mkdocs-material = "^9.5.0"
pymdown-extensions = "^10.7.0"

# Utilities
taskipy = "^1.12.2"
pre-commit = "^3.6.0"
pip-audit = "^2.10.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.taskipy.tasks]
format = """
isort src/ tests/
black src/ tests/
"""
lint = """
flake8 src/
mypy src/
pylint src/
"""
security = """
bandit -r src/ -c pyproject.toml
pip-audit
"""
test = "pytest -v --cov=src --cov-report=html"
test-watch = "pytest -v --cov=src -f"
kill = "kill -9 $(lsof -t -i :8000)"
doc = "mkdocs serve"
doc-build = "mkdocs build"
all = """
task format
task lint
task security
task test
"""

# Docker commands for AI environments
langchain = "docker compose run --rm langchain"
crewai = "docker compose run --rm crewai"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B104"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
